RESOLVED FIXED36492
[Qt] websocket/tests/long-invalid-header.html fails
https://bugs.webkit.org/show_bug.cgi?id=36492
Summary [Qt] websocket/tests/long-invalid-header.html fails
Csaba Osztrogonác
Reported 2010-03-23 06:28:29 PDT
websocket/tests/long-invalid-header.html inroduced in http://trac.webkit.org/changeset/56380. It fails on Qt bots because of different CONSOLE MESSAGE, but the PASS and TEST COMPLETE is correct and it passes in QtLauncher http://build.webkit.org/results/Qt%20Linux%20Release/r56386%20%288922%29/websocket/tests/long-invalid-header-pretty-diff.html http://www.sed.hu/webkit/qtbuildbot/results/x86-32%20Linux%20Qt%20Debug/r56386%20%281395%29/websocket/tests/long-invalid-header-pretty-diff.html I think the it might be a Qt-DRT bug.
Attachments
Patch (8.95 KB, patch)
2010-03-23 22:38 PDT, Fumitoshi Ukai
eric: review+
Csaba Osztrogonác
Comment 1 2010-03-23 06:36:47 PDT
websocket/tests/long-invalid-header.html skipped to make bots happy: http://trac.webkit.org/changeset/56389
Fumitoshi Ukai
Comment 2 2010-03-23 22:35:10 PDT
I think the expected data depends on how data is buffered/delivered from SocketStreamHandle to WebSocketChannel,WebSocketHandshake. I think console message doesn't need to whole data in buffer.
Fumitoshi Ukai
Comment 3 2010-03-23 22:38:45 PDT
Eric Seidel (no email)
Comment 4 2010-03-25 01:10:56 PDT
Comment on attachment 51479 [details] Patch I'm surprised this wouldn't be a part of the Console classes instead of done ad-hoc for WebSocket here. But this is OK for now I guess.
Eric Seidel (no email)
Comment 5 2010-03-25 01:11:13 PDT
CCing inspector gurus.
Fumitoshi Ukai
Comment 6 2010-03-25 01:39:16 PDT
Note You need to log in before you can comment on or make changes to this bug.