2010-03-25  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Eric Seidel.

        [Qt] websocket/tests/long-invalid-header.html fails
        https://bugs.webkit.org/show_bug.cgi?id=36492

        * websocket/tests/long-invalid-header-expected.txt: trim console message.
2010-03-25  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Eric Seidel.

        [Qt] websocket/tests/long-invalid-header.html fails
        https://bugs.webkit.org/show_bug.cgi?id=36492

        trim message at most 128 bytes from the current position.
        I believe it's enough data to investigate the error reason and
        it makes test not depend on buffered size.

        * websockets/WebSocketHandshake.cpp:
        (WebCore::trimConsoleMessage):
        (WebCore::WebSocketHandshake::readServerHandshake):
        (WebCore::WebSocketHandshake::readHTTPHeaders):

Canonical link: https://commits.webkit.org/47805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56511 268f45cc-cd09-0410-ab3c-d52691b4dbfc